fix: better rescaling on mobile devices

--- a/src/scss/_basic.scss
+++ b/src/scss/_basic.scss
@@ -30,6 +30,9 @@ header {
         height: 1px;
         background-color: rgb(0, 58, 58);
     }
+    @media screen and (orientation: portrait){
+        display: none;
+    }
 }
 
 footer {
@@ -52,10 +55,19 @@ footer {
         height: 1px;
         background-color: rgb(0, 58, 58);
     }
+    @media screen and (orientation: portrait){
+        line-height: 16px;
+        height: 16px;
+        font-size: 0.8rem;
+    }
 }
 
 #app {
     height: calc(100vh - 64px);
+    max-width: 100%;
+    @media screen and (orientation: portrait) {
+        height: calc(100vh - 16px);
+    }
     canvas {
         height: 100%;
         display: block;
